# sirb

./: .gitignore  README.md  new_html.txt  pyproject.toml  sirb.yml
sirb/cli/: main.py  profiles-models.json  stream_formatter.py
sirb/core/: __init__.py  aggregator.py  blackboard.py  correlation.py  models.py  persistence.py  registry.py  router.py  task_queue.py  throttle.py  trends.py  worker_base.py  worker_pool.py
sirb/discovery/: __init__.py  ais_port_scanner.py  port_config.py
sirb/templates/: assessment.j2  swarm-report.j2  vessel-analyst-report.j2  vessel-indicators-and-detection.j2  vessel-red-team-playbook.j2
sirb/workers/: __init__.py  base.py  shipcrawler_worker.py
tests/: test_core.py  test_correlation.py  test_dedup.py  test_discovery.py  test_health.py  test_shipcrawler_worker.py  test_throttle.py  test_trends.py  test_triggers.py
